Added check for the impossible
This error occurs sometimes when builds are done without sufficient
cleaning. It is a serious anomaly, and so while unlikely, we need to
throw errors loudly if it happens.